--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,44 @@
+cffi==1.17.1
 colorama==0.4.6
 contourpy==1.3.0
 cycler==0.12.1
+Cython==3.0.11
+derivative==0.6.3
 fonttools==4.54.1
 future==1.0.0
+h5netcdf==1.4.0
+h5py==3.12.1
+importlib_metadata==8.5.0
 importlib_resources==6.4.5
+joblib==1.4.2
 kiwisolver==1.4.7
-matplotlib==3.9.2
+llvmlite==0.43.0
+matchering==2.0.6
+matplotlib==3.8.2
+mido==1.3.3
+numba==0.60.0
 numpy==1.26.4
 packaging==24.1
+pandas==2.2.3
+patsy==0.5.6
 pillow==11.0.0
+pycparser==2.22
 pycwt==0.4.0b0
+PyDMD==1.0.1
+pydub==0.25.1
+pykoopman==0.2.0
 pyloudnorm==0.1.1
 pyparsing==3.2.0
 python-dateutil==2.9.0.post0
 pytz==2024.2
-scipy==1.13.1
+resampy==0.4.3
+scikit-learn==1.5.2
+scipy==1.12.0
 six==1.16.0
-tqdm==4.66.5
+soundfile==0.12.1
+statsmodels==0.14.4
+threadpoolctl==3.5.0
+tqdm==4.66.2
 tzdata==2024.2
+xarray==2024.7.0
 zipp==3.20.2
